# KBarInfo

./: .gitignore  GNUmakefile  Makefile  README.md  main.c  meson.build
src/: main.c  meson.build  network.c  network.h  power.c  power.h  statusbar.c  statusbar.h  time.c  time.h  volume.c  volume.h  widget.c  widget.h
utils/: dbus.c  dbus.h  debug.c  debug.h  state.c  state.h
widgets/: network.c  network.h  power.c  power.h  time.c  time.h  volume.c  volume.h  widget.c  widget.h
